--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-scripts": "2.1.0",
-    "bootstrap": "4.1.3"
+    "bootstrap": ">=4.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
